integrate simple payment